Fix tests on OSX