@@ -76,6 +76,9 @@
           <version>${tycho-version}</version>
           <configuration>
           	<providerHint>junit4</providerHint>
+            <argLine>
+              --add-opens java.base/java.lang=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -171,7 +174,8 @@
         <configuration>
           <useUIHarness>${tests.use.ui}</useUIHarness>
           <useUIThread>${tests.use.ui}</useUIThread>
-          <appArgLine>-consoleLog</appArgLine>
+          <showEclipseLog>true</showEclipseLog>
+          <skipAfterFailureCount>10</skipAfterFailureCount>
         </configuration>
       </plugin>
       <plugin>
@@ -193,10 +197,9 @@
   	  <!-- makes test run in UI thread when under OSX -->
       <id>osx</id>
       <activation>
-        <property>
-          <name>java.vendor.url</name>
-          <value>http://www.apple.com/</value>
-        </property>
+        <os>
+            <family>mac</family>
+        </os>
       </activation>
       <build>
         <pluginManagement>
@@ -206,7 +209,10 @@
               <artifactId>tycho-surefire-plugin</artifactId>
               <version>${tycho-version}</version>
               <configuration>
-                <argLine>-XstartOnFirstThread</argLine>
+                <argLine>
+                  -XstartOnFirstThread
+                  --add-opens java.base/java.lang=ALL-UNNAMED
+                </argLine>
               </configuration>
             </plugin>
           </plugins>
